# memz-rs

./: .gitignore  Cargo.toml  readme.md
payload_mbr/: .kernel.asm.swp  Makefile  kernel.asm  macro.asm  readme.md
payload_mbr/data/compressor/src/: main.rs
payload_mbr/data/other/: message.txt
payload_mbr/hihi/: hello.c
src/: lib.rs  main.rs
src/data/: code.rs  data.rs  mod.rs  msg.rs  sites.rs
src/memz/: mod.rs
src/ntdll/: data.rs  library.rs  mod.rs  ntdll_api.rs
src/payloads/: callback.rs  define.rs  function.rs  mod.rs  payloads.rs  system.rs
src/utils/: log.rs
tests/: winapi_test.rs
