[package]
name = "memz-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi", 
    "Win32_UI_Shell", 
    "Win32_System_Environment", 
    "Win32_Globalization"
]
