[package]
name = "memz-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.5"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[features]
WATCHDOG = []
DEBUG_MODE = []
CLEAN = []
